--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,16 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
+# project
+index.d.ts
+index.js
+index.js.map
+index.js.metadata.json
+
 # compiled output
 /dist
 /tmp
 /out-tsc
-/iatec-layout
+/build
 .editorconfig
 
 # dependencies
